// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ReadOrientation /> > should render when [index=0] 1`] = `
<styled.div>
  LEFT
</styled.div>
`;

exports[`<ReadOrientation /> > should render when [index=1] 1`] = `
<styled.div>
  RIGHT
</styled.div>
`;

exports[`<ReadOrientation /> > should render when [selected=false] 1`] = `""`;

exports[`<ReadOrientation /> > should render when [selected=true] 1`] = `
<styled.div>
  LEFT
</styled.div>
`;

exports[`<ReadSelectorItem /> > should render when [selected=false] 1`] = `
<Styled(SelectBoxGroupSection)
  active={false}
  onClick={[Function]}
>
  <styled.div>
    <styled.span>
      <Icon
        name="file"
      />
    </styled.span>
    <div>
      <strong>
        bar
      </strong>
      <div>
        0.0B
      </div>
    </div>
  </styled.div>
  <ReadOrientation
    index={0}
    selected={false}
  />
</Styled(SelectBoxGroupSection)>
`;

exports[`<ReadSelectorItem /> > should render when [selected=true] 1`] = `
<Styled(SelectBoxGroupSection)
  active={true}
  onClick={[Function]}
>
  <styled.div>
    <styled.span>
      <Icon
        name="file"
      />
    </styled.span>
    <div>
      <strong>
        bar
      </strong>
      <div>
        0.0B
      </div>
    </div>
  </styled.div>
  <ReadOrientation
    index={0}
    selected={true}
  />
</Styled(SelectBoxGroupSection)>
`;
